# btc_self_custody

./: .dockerignore  .env  .gitignore  ;  Cargo.toml  DEPLOYMENT_LOG.md  Dockerfile  MIGRATION_PLAN.md  README.md  btc-self-custody.excalidraw  configuration.yaml  general.yml  input.css  notes.md  notes.txt  package-lock.json  package.json  rustfmt.toml  spec.yaml  tailwind.config.js
.cargo/: cargo.toml
.github/workflows/: audit.yml  deploy.yml  e2e.yml  general.yml
.sqlx/: query-48a0c90962da9a725aaa0bbb6afe1103f62771555921e978805cb2e1d075e836.json  query-5af44c2d0e561a18d9cd804777eca1b8f3dcfd7d3a7e68c578ebbfc373accdda.json
.well-known/: nostr.json
assets/: browserconfig.xml  google-play-logo.avif  jsonld.js  llms.txt  public_key.asc  robots.txt  sections.js  site.webmanifest  sitemap.xml  stats.js  sw.js
assets/downloads/: seed-backup-sheet.html
assets/js/: heartbeat-blips.js  heartbeat-interaction.js  heartbeat-render.js  heartbeat-sse.js  heartbeat-state.js  heartbeat-timeline.js  heartbeat-vitals.js  heartbeat.js  jsonld.js  lightbox.js  stats.js  wasm-fallback.js
configuration/: base.yaml
docs/: block-heartbeat-design.md  data-guide.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: guides.spec.ts  smoke.spec.ts
migrations/: 20231125175445_create_blogposts_table.sql
scripts/: deploy-remote.sh  deploy.sh  init_db.sh  start9-iptables.sh
src/: app.rs  configuration.rs  extras.rs  guides.rs  guides_v2.rs  lib.rs  main.rs  routes.rs  server.rs  telemetry.rs
src/extras/: accordion_menu.rs  back.rs  buttons.rs  footer.rs  generic_button.rs  mod.rs  navbar.rs  spinner.rs  stepper.rs  stepper_v2.rs
src/faqs/advanced_desktop_setup/: advanced_faq1.md  advanced_faq2.md  advanced_faq3.md  advanced_faq4.md  advanced_faq5.md  advanced_faq6.md
src/faqs/bluewallet/: blue_faq1.md  blue_faq2.md  blue_faq3.md  blue_faq4.md  blue_faq5.md  blue_faq6.md  blue_faq7.md
src/faqs/general/: general_faq01.md  general_faq02.md  general_faq03.md  general_faq04.md  general_faq05.md  general_faq06.md  general_faq07.md  general_faq08.md  general_faq09.md  general_faq1.md  general_faq10.md  general_faq11.md  general_faq12.md  general_faq13.md  general_faq14.md  general_faq15.md  general_faq2.md  general_faq3.md  general_faq6.md  general_faq8.md  general_faq9.md
src/faqs/greenwallet/: greenwallet_faq1.md  greenwallet_faq2.md  greenwallet_faq3.md  greenwallet_faq4.md  greenwallet_faq5.md  greenwallet_faq6.md  greenwallet_faq7.md
src/faqs/hardware_wallet_setup/: hardware_faq1.md  hardware_faq2.md  hardware_faq3.md  hardware_faq4.md  hardware_faq5.md
src/faqs/mutiny/: mutiny_faq1.md  mutiny_faq2.md  mutiny_faq3.md  mutiny_faq4.md  mutiny_faq5.md  mutiny_faq6.md  mutiny_faq7.md  mutiny_faq8.md
src/faqs/node_setup/: node_faq1.md  node_faq2.md  node_faq3.md  node_faq4.md  node_faq5.md  node_faq6.md
src/faqs/samourai/: samourai_faq1.md  samourai_faq2.md  samourai_faq3.md  samourai_faq4.md  samourai_faq5.md  samourai_faq6.md
src/faqs/sparrow/: blue_faq1.md  blue_faq4.md  sparrow_faq1.md  sparrow_faq2.md  sparrow_faq3.md  sparrow_faq5.md  sparrow_faq6.md  sparrow_faq7.md  sparrow_faq8.md  sparrow_faq9.md
src/helpers/: get_path.rs  markdown.rs  mod.rs
src/routes/: about.rs  advanced.rs  beginner.rs  beginner_wallet_instructions.rs  blog.rs  faq.rs  guide.rs  guideselector.rs  homepage.rs  intermediate.rs  learn.rs  mod.rs  navbar.rs  not_found.rs  stats.rs  test.rs
src/routes/observatory/: components.rs  embedded.rs  fees.rs  hall_of_fame.rs  hall_of_fame_data.rs  heartbeat.rs  helpers.rs  mining.rs  mod.rs  network.rs  on_this_day.rs  overview.rs  shared.rs  signaling.rs  stats.rs  whale_watch.rs
src/routes/observatory/learn/: index.rs  methodology.rs  mod.rs  protocols.rs
src/routes/observatory/shared/: drawer.rs  mod.rs  range.rs  state.rs  url_sync.rs
src/routes/stats/: components.rs  helpers.rs  mod.rs
src/routes/stats/learn/: protocols.rs
src/server/: api.rs  create_post.rs  health_check.rs  mod.rs  subscriptions.rs
src/server/api/: fetch_faqs.rs
src/stats/: api.rs  api_integration_tests.rs  cache.rs  charts.rs  classifier.rs  config.rs  db.rs  error.rs  ingest.rs  mod.rs  notable.rs  rpc.rs  rpc_cache.rs  server_fns.rs  startup.rs  types.rs  zmq_subscriber.rs
src/stats/charts/: adoption.rs  embedded.rs  fees.rs  gauges.rs  mining.rs  mod.rs  network.rs  signaling.rs  tx_metrics.rs
style/: main.scss  output.css  tailwind.css
tasks/: lessons.md  todo.md
tests/: health_check.rs
