[package]
name = "we_hodl_btc"
version = "0.1.0"
authors = ["Bayer <bayernator@protonmail.com"]
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "we_hodl_btc"

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = "0.1"
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_router = { version = "0.8" }
wasm-bindgen = "0.2.114"
serde = { version = "1", features = ["derive"] }
pulldown-cmark = { version = "0.12", features = ["serde"] }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
leptos-use = { version = "0.16", features = ["use_clipboard"] }

# --- DB dependencies (commented out for now, revisit when blog/subscriptions reintroduced) ---
# sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], optional = true }
# config = "0.14"
# tracing-futures = "0.2"
# tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# tracing-bunyan-formatter = { git = "https://github.com/Bayernatoor/tracing-bunyan-formatter.git", default-features = false, branch = "add_support_for_all_targets" }
# tracing-log = "0.2"
# console_log = "0.2"
# log = "0.4"

[dev-dependencies]
# reqwest = { version = "0.12", features = ["json"] }
# once_cell = "1"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = ["dep:axum", "dep:leptos_axum", "dep:tokio", "leptos/ssr", "leptos-use/ssr"]

[package.metadata.leptos]
output-name = "we_hodl_btc"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:8000"
reload-port = 3002
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
